// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Busy Indicator Contrast Mode 1`] = `
<div
  style="display:flex;justify-content:center;flex-direction:column;align-items:center;background-color:cadetblue;height:250px"
>
  

  <div
    aria-hidden="false"
    aria-label="Loading"
    class="fd-busy-indicator--l contrast"
    role="img"
  >
    
    
    <div
      class="fd-busy-indicator--circle-0"
    />
    
    
    <div
      class="fd-busy-indicator--circle-1"
    />
    
    
    <div
      class="fd-busy-indicator--circle-2"
    />
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Busy Indicator Extended Busy Indicator 1`] = `
<div
  class="fd-busy-indicator-extended"
>
  
    
  <div
    aria-hidden="false"
    aria-label="Loading"
    class="fd-busy-indicator fd-busy-indicator--l"
    role="img"
  >
    
        
    <div
      class="fd-busy-indicator--circle-0"
    />
    
        
    <div
      class="fd-busy-indicator--circle-1"
    />
    
        
    <div
      class="fd-busy-indicator--circle-2"
    />
    
    
  </div>
  
    
  <div
    class="fd-busy-indicator-extended__label"
  >
    loading data...
  </div>
  

</div>
`;

exports[`Storyshots Components/Busy Indicator Extended Busy Indicator Inside Message Toast 1`] = `
<div
  class="fd-message-toast fd-busy-indicator-extended fd-busy-indicator-extended--message-toast"
>
  
    
  <div
    aria-hidden="false"
    aria-label="Loading"
    class="fd-busy-indicator fd-busy-indicator--l"
    role="img"
  >
    
        
    <div
      class="fd-busy-indicator--circle-0"
    />
    
        
    <div
      class="fd-busy-indicator--circle-1"
    />
    
        
    <div
      class="fd-busy-indicator--circle-2"
    />
    
    
  </div>
  
    
  <div
    class="fd-busy-indicator-extended__label"
  >
    loading data...
  </div>
  

</div>
`;

exports[`Storyshots Components/Busy Indicator Standard 1`] = `
<div
  style="text-align: center"
>
  
    
  <div
    aria-hidden="false"
    aria-label="Loading"
    class="fd-busy-indicator--l"
    role="img"
  >
    
        
    <div
      class="fd-busy-indicator--circle-0"
    />
    
        
    <div
      class="fd-busy-indicator--circle-1"
    />
    
        
    <div
      class="fd-busy-indicator--circle-2"
    />
    
    
  </div>
  <br />
  <br />
  
    
  <div
    aria-hidden="false"
    aria-label="Loading"
    class="fd-busy-indicator--m"
    role="img"
  >
    
        
    <div
      class="fd-busy-indicator--circle-0"
    />
    
        
    <div
      class="fd-busy-indicator--circle-1"
    />
    
        
    <div
      class="fd-busy-indicator--circle-2"
    />
    
    
  </div>
  <br />
  <br />
  
    
  <div
    aria-hidden="false"
    aria-label="Loading"
    class="fd-busy-indicator"
    role="img"
  >
    
        
    <div
      class="fd-busy-indicator--circle-0"
    />
    
        
    <div
      class="fd-busy-indicator--circle-1"
    />
    
        
    <div
      class="fd-busy-indicator--circle-2"
    />
    
    
  </div>
  
    
</div>
`;
